# Opticord

./: .gitignore  LICENSE  pyproject.toml
opticord/: client.py
tests/: client-test.py  test-functions.py
